# ExtFileReplicator

./: .gitignore  COMMANDS.Md  README.md  Readme.md  build.py  build.spec  installer.nsi  pyproject.toml  replicator_config.json  requirements.txt  setup.cfg  setup.py  version_info.py
.github/workflows/: check-exec.yml  python-package.yml
folder_replicator/: __init__.py  cli.py  config_manager.py  file_operations.py  gui.py  logger.py  service_manager.py  synchronization.py  watcher.py
folder_replicator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
