[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ext_folder_replicator"
version = "1.0.0"
description = "A powerful folder synchronization tool"
requires-python = ">=3.7"
dependencies = [
    "watchdog>=2.1.0",
    "lockfile>=0.12.2",
    "daemon>=1.2; sys_platform != 'win32'",
    "pywin32>=300; sys_platform == 'win32'"
]

[project.scripts]
frep = "folder_replicator.cli:main"

[tool.setuptools]
packages = ["folder_replicator"]
