[project]
name = "ext_folder_replicator"
version = "1.1.1"
description = "A powerful folder synchronization tool"
requires-python = ">=3.7"
authors = [
    {name = "ajaykr2109_nowStack", email = "chaturvedikraj2109@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "watchdog>=2.1.0",
    "lockfile>=0.12.2",
    "daemon>=1.2; sys_platform != 'win32'",
    "pywin32>=300; sys_platform == 'win32'",
    "PyQt6>=6.6.1",
    "QDarkStyle>=3.2.0"
]

[project.scripts]
frep = "folder_replicator.cli:main"
frep-gui = "folder_replicator.gui:run_gui"
