[metadata]
name = folder-replicator
version = 1.0.0
description = A powerful folder synchronization tool
long_description = file: README.md
long_description_content_type = text/markdown
author = ajkr2109
license = MIT

[options]
packages = find:
install_requires =
    watchdog>=2.0.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    frep = folder_replicator.cli:main