[metadata]
name = ext_folder_replicator
dynamic = ["version"]
description = A powerful folder synchronization tool
long_description = file: README.md
long_description_content_type = text/markdown
author = ajkr2109
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: System :: Filesystems

[options]
packages = find:
python_requires = >=3.7
install_requires =
    watchdog>=2.1.0
    daemon>=1.2
    lockfile>=0.12.2

[options.extras_require]
windows = 
    pywin32>=300; sys_platform == "win32"

[options.entry_points]
console_scripts =
    frep = folder_replicator.cli:main